scss/partials/_empty_board.scss
div.empty-board {
  margin: 4px auto;
  float: left;
  text-align: center;
  width: 100%;

  @include mobile() {
    float: unset;
    margin: 0px auto;
    width: 100%;
    padding: 0px 24px;
  }

  div.empty-board-grey-box {
    width: 100%;
    background-image: cdnUrl("/img/ML/empty_state_background.svg");
    background-position: center;
    background-size: 720px 400px;
    background-repeat: no-repeat;
    border-radius: 6px;
    height: 400px;
    padding: 80px 153px;
    text-align: center;
    border-collapse: collapse;
    margin: 8px auto 0;

    @include mobile() {
      width: 100%;
      background-image: none;
      border: none;
      padding: 40px;
    }

    div.empty-board-illustration {
      width: 56px;
      height: 56px;
      background-repeat: no-repeat;
      background-position: center;
      background-size: 56px 56px;
      margin: 0 auto;

      &.ap-section {
        background-image: cdnUrl("/img/ML/empty_state_ap_section.svg");
      }

      &.must-see {
        background-image: cdnUrl("/img/ML/empty_state_ms.svg");
      }

      &.drafts {
        background-image: cdnUrl("/img/ML/empty_state_ap_section.svg");
      }
    }

    div.empty-board-title {
      @include avenir_H();
      font-size: 16px;
      color: $deep_navy;
      margin: 16px auto 0;
    }

    div.empty-board-subtitle {
      @include avenir_M();
      font-size: 14px;
      color: $ui_grey;
      margin: 4px auto 0;
    }

    button.create-new-post-bt {
      width: 168px;
      height: 40px;
      background-color: $coral;
      color: $carrot_orange;
      @include avenir_H();
      font-size: 14px;
      border-radius: 100px;
      margin: 20px auto 0;
    }
  }
}

