Fix empty state position on mobile.

--- a/scss/partials/_empty_board.scss
+++ b/scss/partials/_empty_board.scss
@@ -26,9 +26,11 @@ div.empty-board {
 
     @include mobile() {
       width: 100%;
+      height: auto;
       background-image: none;
       border: none;
-      padding: 40px;
+      padding: 40px 0;
+      margin: 100px auto 0;
     }
 
     div.empty-board-illustration {
